Correction erreur dans les marge pour la version mobile

--- a/src/styles/style_accueil_logement.scss
+++ b/src/styles/style_accueil_logement.scss
@@ -48,6 +48,7 @@
         background-color: $white;
         padding : 0;
         margin : 0 20px;
+        margin-bottom : 22px;
 
         &__grid {
             grid-template-columns: 1fr;
